SERVER-61509 Avoid repairing read-only databases